--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -20,6 +20,7 @@ set-option -g allow-rename off
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'dracula/tmux'
 
 run '~/.tmux/plugins/tpm/tpm'
